# d1-licheerv-baremetal

src/d1_barematel_sdk_cmake/: CMakeLists.txt
src/d1_barematel_sdk_cmake/apps/: CMakeLists.txt
src/d1_barematel_sdk_cmake/apps/hello_world/: CMakeLists.txt
src/d1_barematel_sdk_cmake/apps/vector_test/: CMakeLists.txt  main.c
src/d1_barematel_sdk_cmake/boot/: CMakeLists.txt  interrupt.c  interrupt.h  linkage.h  trap.h
src/d1_barematel_sdk_cmake/cmake/: helpers.cmake  toolchain.cmake
src/d1_barematel_sdk_cmake/drivers/: CMakeLists.txt  clint.h  clk.h  gpio.h  plint.c  plint.h  timer.h  uart.h
src/d1_barematel_sdk_cmake/support/: CMakeLists.txt  common.h
src/d1_barematel_sdk_meson/: cross.txt  meson.build
